[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest-c8y"
version = "0.1.3"
description = "pytest plugin for Cumulocity IoT"
license = "MPL-2.0"
authors = [
    "Reuben Miller <reuben.d.miller@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/reubenmiller/pytest-c8y"
repository = "https://github.com/reubenmiller/pytest-c8y"
keywords = [
    "pytest",
    "cumulocity",
    "iot",
    "qa"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
packages = [
    { include = "pytest_c8y" },
]
include = [
    { path = "testing", format = "sdist" },
    { path = "docs", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
pytest = "^7.1.2"
pytest-base-url = "^2.0.0"
pytest-html = "^3.1.1"
pytest-variables = "^2.0.0"
requests = "^2.26.0"
c8y-api = "^1.4"
python-dotenv = "^0.20.0"
c8y-test-core = {git = "https://github.com/reubenmiller/c8y-test-core.git", rev = "0.0.5"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
tox = "^3.24.5"
pre-commit = "^2.17.0"
pytest-localserver = "^0.5.0"
pytest-xdist = "^2.4.0"
pytest-mock = "^3.6.1"
pytest = "^7.1.2"
pylint = "^2.14.3"
poetry2setup = "^1.0.0"

[tool.poetry.plugins]
pytest11 = { pytest_c8y = "pytest_c8y.plugin" }
